# twopy

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  README.md  RELEASE.md  TUTORIAL.md  config.example.yml  config.yml  environment.yml  pyproject.toml  roadmap.md
.github/workflows/: pages.yml  publish-to-pypi.yml
docs/: CNAME  Makefile  conf.py  custom_workflows.md  development.md  getting_started.md  gui.md  index.md  input_data_spec.md  python_api.md  recording_file_schema.md  writing_custom_workflows.md
docs/gui/: custom_tab.md  group_matching.md  index.md  loading.md  plots.md  rois.md  saving.md
examples/custom_workflows/: reference_showcase.py
scripts/: committer  function_inventory.py  launch_napari  test_timings.py
scripts/function_inventory_support/: __init__.py  builder.py  cli.py  enrichment.py  model.py
src/twopy/: __init__.py  __init__.pyi  _segments.py  _version.py  analysis_cache.py  api.py  cache_inventory.py  config.example.yml  config.py  conversion.py  converted.py  database.py  database_cache.py  database_sql.py  filenames.py  frame_ranges.py  hdf5_utils.py  inspection.py  matlab.py  napari.py  photodiode.py  photodiode_classification.py  pixel_calibration.py  pixel_calibration_profiles.py  response_roi_extraction.py  roi.py  roi_extraction.py  roi_mask_cleanup.py  session.py  spatial.py  spatial_orientation.py  stimulus.py  synchronization.py  typing_guards.py
src/twopy/analysis/: __init__.py  background_subtraction.py  dff.py  dff_options.py  epoch_mapping.py  group_matching.py  kernels.py  motion.py  persistence.py  response_context.py  response_maps.py  response_plotting.py  response_window_options.py  responses.py  timing.py  trials.py  workflow.py
src/twopy/calibrations/: pixel_calibration_profiles.csv  pixel_size.csv
src/twopy/conversion/: __init__.py  alignment_crop.py  api.py  frame_ranges.py  hdf5_writing.py  matlab_values.py  orientation.py  source_loading.py  stimulus_code.py  types.py
src/twopy/custom/: __init__.py  context.py  discovery.py  metadata.py  native.py  parameters.py  provenance.py  registry.py  results.py  runner.py  types.py  workflows.py
src/twopy/database/: __init__.py  cache.py  catalog.py  connection.py  generic.py  modeled.py  search.py  sql.py  types.py
src/twopy/napari/: __init__.py  __main__.py  constants.py  controls.py  custom_tab.py  database_favorite_editor.py  database_favorites.py  database_search.py  dims.py  display.py  display_paths.py  empty_state.py  errors.py  group_matching.py  group_matching_images.py  group_matching_roi.py  group_matching_style.py  interactive.py  latest_worker.py  launcher.py  layout.py  live_analysis.py  load_controller.py  load_picker.py  load_progress.py  (+23 more)
tests/: __init__.py  converted_files.py  gui_environment.py  napari_plot_data_helpers.py  recording_data.py  tempdir.py  test_api.py  test_background_subtraction.py  test_cache_inventory.py  test_config.py  test_conversion.py  test_converted.py  test_custom_workflows.py  test_database.py  test_dff.py  test_epoch_mapping.py  test_filenames.py  test_frame_ranges.py  test_function_inventory.py  test_group_matching.py  test_hdf5_utils.py  test_import.py  test_inspection.py  test_kernels.py  test_load_workflow.py  test_matlab.py  test_motion.py  test_napari.py  test_napari_database_search.py  test_napari_display.py  test_napari_export.py  test_napari_group_matching_responses.py  test_napari_group_matching_roi_cards.py  test_napari_live_controller.py  test_napari_load_controller.py  test_napari_load_picker.py  test_napari_load_progress.py  test_napari_load_tab.py  test_napari_loaded_recordings.py  test_napari_path_resolution.py  (+38 more)
tests/napari_support/: __init__.py  base.py  helpers.py
(+73 files in other folders)
