[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "twopy"
version = "0.1.0"
description = "Two-photon imaging analysis tool with a napari interface."
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = { text = "MIT" }
authors = [
  { name = "Gustavo Madeira Santana", email = "fromweb1@gumadeiras.com" },
]
dependencies = [
  "h5py>=3.16,<4",
  "napari[all]>=0.7,<0.8",
  "numpy>=2.3,<3",
  "pre-commit>=4.6,<5",
  "pyyaml>=6.0.3,<7",
  "ruff>=0.15",
  "scipy>=1.17,<2",
  "tifffile>=2026.3,<2027",
  "ty>=0.0.34,<0.1",
]

[project.scripts]
twopy = "twopy.napari:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
src = ["src", "tests"]
target-version = "py313"

[tool.ruff.lint]
select = [
  "ANN",
  "B",
  "D",
  "E",
  "F",
  "I",
  "SIM",
  "UP",
  "W",
]
ignore = [
  "D203",
  "D213",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ty.environment]
python-version = "3.13"

[tool.ty.src]
include = ["src", "tests"]

[tool.ty.terminal]
error-on-warning = true
